syntax = "proto3";

package jorgejr568.portfolio_grpc;

import "google/protobuf/timestamp.proto";
import "google/type/date.proto";

option go_package = "github.com/jorgejr568/portfolio-grpc/gen/go/jorgejr568/portfolio_grpc";

message Education {
  message Institution {
    string name = 1;
    string url = 2;
  }

  int64 id = 1;
  string title = 2;
  Institution institution = 3;
  google.type.Date started_at = 4;
  google.type.Date ended_at = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetAllEducationsRequest {}

message GetAllEducationsResponse {
  repeated Education educations = 1;
}

message GetEducationRequest {
  int64 id = 1;
}

message GetEducationResponse {
  Education education = 1;
}
